🍋feat: add endpoints favorite
