# src/app.ts
@@ -6,7 +6,7 @@ import { swaggerSpec, swaggerSpecJson, swaggerStyle } from './swagger/swaggerCon
 import categoryRoutes from './routes/categoryRoute';
 import destinationRoutes from './routes/destinationRoute';
 import experienceRoutes from './routes/experienceRoute';
-// import favoriteRoutes from './routes/favoriteRoute';
+import favoriteRoutes from './routes/favoriteRoute';
 import planRoutes from './routes/planRoute';
 import reviewRoutes from './routes/reviewRoute';
 
@@ -22,7 +22,7 @@ app.use(cors({
 app.use('/categories', categoryRoutes);
 app.use('/destinations', destinationRoutes);
 app.use('/experiences', experienceRoutes);
-// app.use('/favorites', favoriteRoutes);
+app.use('/favorites', favoriteRoutes);
 app.use('/plans', planRoutes);
 app.use('/reviews', reviewRoutes);
 
