# src/swagger/swagger.yaml
@@ -958,6 +958,61 @@ components:
           type: string
           description: ID of the destination associated with the experience
           example: 63f47adf2d7e6b04e4f978c7
+    Favorite:
+      type: object
+      required:
+        - id
+        - experiences_id
+        - user_id
+      properties:
+        id:
+          type: string
+          description: Unique identifier for the favorite record
+          example: 60b8d295f1c0d2b0f1b2c3d8
+        experiences_id:
+          type: array
+          items:
+            type: string
+          description: List of experience IDs associated with the favorite
+          example:
+            - 66ce29934244142ada6b021e
+            - 77ce29934244142ada6b021f
+        user_id:
+          type: string
+          description: Firebase UID of the user who marked the favorite
+          example: user1234uid
+    FavoriteUpsert:
+      type: object
+      required:
+        - experience_id
+      properties:
+        experience_id:
+          type: string
+          description: Unique identifier for the favorited experience
+          example: 60b8d295f1c0d2b0f1b2c3d9
+    FavoriteUpsertExtended:
+      type: object
+      required:
+        - experience_id
+        - experiences_id
+        - user_id
+      properties:
+        experience_id:
+          type: string
+          description: Unique identifier for the favorited experience
+          example: 60b8d295f1c0d2b0f1b2c3d9
+        experiences_id:
+          type: array
+          items:
+            type: string
+          description: List of experience IDs associated with the favorite
+          example:
+            - 66ce29934244142ada6b021e
+            - 77ce29934244142ada6b021f
+        user_id:
+          type: string
+          description: Firebase UID of the user who marked the favorite
+          example: user1234uid
     PlanList:
       type: array
       items:
@@ -1025,6 +1080,13 @@ components:
             - History
             - Architecture
             - Culture
+    FavoriteDeleteSuccess:
+      type: object
+      properties:
+        msg:
+          type: string
+          description: Delete success message
+          example: Successfully deleted from favorites
     DeleteSuccess:
       type: object
       properties:
@@ -1775,6 +1837,132 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/InternalServerError'
+  /favorites:
+    get:
+      summary: View all favorites of a user
+      description: Returns a list of all favorite experiences for the specified user
+      tags:
+        - Favorite
+      operationId: get_favorites_by_user
+      security:
+        - jwt: []
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Favorite'
+        '500':
+          description: InternalServerError
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerError'
+    post:
+      summary: Add a new favorite
+      description: Add a new favorite based on the data provided in the request body.
+      tags:
+        - Favorite
+      operationId: create_favorite
+      security:
+        - jwt: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/FavoriteUpsert'
+      responses:
+        '201':
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Favorite'
+        '400':
+          description: BadRequest
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadRequest'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Unauthorized'
+        '403':
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Forbidden'
+        '404':
+          description: NotFound
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NotFound'
+        '500':
+          description: InternalServerError
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerError'
+  /favorites/{experience_id}:
+    parameters:
+      - name: experience_id
+        in: path
+        required: true
+        description: Experience ID to be removed from favorites
+        schema:
+          type: string
+    delete:
+      summary: Remove experience from favorites
+      description: Remove experience from favorites based on the ID provided
+      tags:
+        - Favorite
+      operationId: delete_favorite
+      security:
+        - jwt: []
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FavoriteDeleteSuccess'
+        '400':
+          description: BadRequest
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadRequest'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Unauthorized'
+        '403':
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Forbidden'
+        '404':
+          description: NotFound
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NotFound'
+        '500':
+          description: InternalServerError
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerError'
   /plans:
     get:
       summary: View all plans
@@ -2194,6 +2382,8 @@ tags:
     description: Routes for destination manipulation
   - name: Experience
     description: Routes for experience manipulation
+  - name: Favorite
+    description: Routes for favorite manipulation
   - name: Plan
     description: Routes for plan manipulation
   - name: Review
